samples/_failures_safe/1761040051_6eeab8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d254502d.c: In function ‘main’:
./samples/SAFE/__tmp_d254502d.c:160:20: error: expected ‘)’ at end of input
  160 |     add_edge(&graph
      |             ~      ^
      |                    )
./samples/SAFE/__tmp_d254502d.c:160:5: error: too few arguments to function ‘add_edge’
  160 |     add_edge(&graph
      |     ^~~~~~~~
./samples/SAFE/__tmp_d254502d.c:106:5: note: declared here
  106 | int add_edge(Graph* graph, int u, int v, int weight) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_d254502d.c:160:5: error: expected declaration or statement at end of input
  160 |     add_edge(&graph
      |     ^~~~~~~~
